--- a/index.ipynb
+++ b/index.ipynb
@@ -1,1 +1,275 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# Vectors and Matrices in Numpy - Lab\n", "\n", "## Introduction\n", "\n", "In this lab, you'll solve some simple matrix creation and manipulation exercises based on what you've learned so far in this section. The key takeaway here is to be able to understand how to use indexing with matrices and vectors while applying some basic operations.\n", "\n", "## Objectives\n", "You will be able to:\n", "* Define vectors and matrices in NumPy\n", "* Check the shape of vectors and matrices\n", "* Access and manipulate individual scalar components of a matrix. \n", "\n", "## 1. Define two arrays $A$  with shape $ (4 \\times 2)$ and $B$ with shape $(2 \\times 3)$ \n", "So    $A =    \n", "  \\left[ {\\begin{array}{cc}\n", "   1402 & 191 \\\\\n", "   1371 &  821\\\\\n", "   949 &  1437 \\\\\n", "   147 & 1448 \\\\\n", "  \\end{array} }\\right]\n", "$\n", "and\n", "$\n", "B =    \n", "  \\left[ {\\begin{array}{ccc}\n", "   1 & 2 & 3 \\\\\n", "   4 & 5 & 6\\\\\n", "  \\end{array} }\\right]\n", "$"]}, {"cell_type": "code", "execution_count": 50, "metadata": {}, "outputs": [{"name": "stdout", "output_type": "stream", "text": ["A=\n", " [[1402  191]\n", " [1371  821]\n", " [ 949 1437]\n", " [ 147 1448]]\n", "B=\n", " [[1 2 3]\n", " [4 5 6]]\n"]}], "source": ["# Code Here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## 2. Print the dimensions of $A$ and $B$ "]}, {"cell_type": "code", "execution_count": 52, "metadata": {}, "outputs": [{"name": "stdout", "output_type": "stream", "text": ["Shape of A: (4, 2)\n", "Shape of B: (2, 3)\n"]}], "source": ["# Code Here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## 3. Print some of the elements from $A$: \n", "* first row and first column\n", "* first row and second column\n", "* third row and second column\n", "* fourth row and first column"]}, {"cell_type": "code", "execution_count": 53, "metadata": {}, "outputs": [{"name": "stdout", "output_type": "stream", "text": ["1402\n", "191\n", "1437\n", "147\n"]}], "source": ["# Code Here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## 4. Write a routine to populate a matrix with random data\n", "* Create an $(3 \\times 3)$ Numpy array with all zeros (use `np.zeros()`)\n", "* Access each location $(i,j)$ of this matrix and fill in random values between the range 1 and 10. "]}, {"cell_type": "code", "execution_count": 54, "metadata": {}, "outputs": [{"name": "stdout", "output_type": "stream", "text": ["before random data:\n", " [[0. 0. 0.]\n", " [0. 0. 0.]\n", " [0. 0. 0.]]\n", "\n", "after random data:\n", " [[2. 7. 5.]\n", " [7. 9. 3.]\n", " [6. 5. 9.]]\n"]}], "source": ["# Code Here (due to random data , your output might be different)"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## 5. Turn the above routine into a function\n", "* Create two $(4 \\times 4)$ zero valued matrices and fill with random data using the function\n", "* Add the matrices together in numpy \n", "* Show the results"]}, {"cell_type": "code", "execution_count": 55, "metadata": {}, "outputs": [{"name": "stdout", "output_type": "stream", "text": ["Final output\n", "\n", " [[12.  4. 13.  8.]\n", " [13.  5.  9.  9.]\n", " [11. 11. 11. 17.]\n", " [16. 14.  8. 10.]]\n"]}], "source": ["# Code Here (due to random data , your output might be different)"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Summary \n", "\n", "In this lab, we saw how to create and manipulate vectors and matrices in numpy. We shall now move forward to learning more complex operations including dot products and inverses. "]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.6.6"}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vectors and Matrices in Numpy - Lab\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "In this lab, you'll solve some simple matrix creation and manipulation exercises based on what you've learned so far in this section. The key takeaway here is to be able to understand how to use indexing with matrices and vectors while applying some basic operations.\n",
+    "\n",
+    "## Objectives\n",
+    "You will be able to:\n",
+    "* Define vectors and matrices in NumPy\n",
+    "* Check the shape of vectors and matrices\n",
+    "* Access and manipulate individual scalar components of a matrix. \n",
+    "\n",
+    "## 1. Define two arrays $A$  with shape $ (4 \\times 2)$ and $B$ with shape $(2 \\times 3)$ \n",
+    "So    $A =    \n",
+    "  \\left[ {\\begin{array}{cc}\n",
+    "   1402 & 191 \\\\\n",
+    "   1371 &  821\\\\\n",
+    "   949 &  1437 \\\\\n",
+    "   147 & 1448 \\\\\n",
+    "  \\end{array} }\\right]\n",
+    "$\n",
+    "and\n",
+    "$\n",
+    "B =    \n",
+    "  \\left[ {\\begin{array}{ccc}\n",
+    "   1 & 2 & 3 \\\\\n",
+    "   4 & 5 & 6\\\\\n",
+    "  \\end{array} }\\right]\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1402  191]\n",
+      " [1371  821]\n",
+      " [ 949 1437]\n",
+      " [ 147 1448]]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Code Here\n",
+    "import numpy as np\n",
+    "A=np.array ([[1402, 191],[1371, 821],[949, 1437],[147, 1448]])\n",
+    "B= np.array([[1,2,3],[4,5,6]])\n",
+    "print(A)\n",
+    "print(B)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Print the dimensions of $A$ and $B$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the A shape is (4, 2)\n",
+      "the B shape is (2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Code Here\n",
+    "print('the A shape is' ,A.shape)\n",
+    "print('the B shape is' ,B.shape)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Print some of the elements from $A$: \n",
+    "* first row and first column\n",
+    "* first row and second column\n",
+    "* third row and second column\n",
+    "* fourth row and first column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1402\n",
+      "191\n",
+      "1437\n",
+      "147\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Code Here\n",
+    "print(A[0,0])\n",
+    "print(A[0,1])\n",
+    "print(A[2,1])\n",
+    "print(A[3,0])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Write a routine to populate a matrix with random data\n",
+    "* Create an $(3 \\times 3)$ Numpy array with all zeros (use `np.zeros()`)\n",
+    "* Access each location $(i,j)$ of this matrix and fill in random values between the range 1 and 10. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Code Here (due to random data , your output might be different)\n",
+    "import random\n",
+    "X=np.zeros((3,3))\n",
+    "\n",
+    "print(X)\n",
+    "\n",
+    "\n",
+    "X[2,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "for i in range(2):\n",
+    "    for j in range (2):\n",
+    "        X[i,j]=random.randrange(1,10)\n",
+    "\n",
+    "X.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Turn the above routine into a function\n",
+    "* Create two $(4 \\times 4)$ zero valued matrices and fill with random data using the function\n",
+    "* Add the matrices together in numpy \n",
+    "* Show the results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 2., 2., 0.],\n",
+       "       [4., 4., 0., 0.],\n",
+       "       [3., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Code Here (due to random data , your output might be different)\n",
+    "def create_array (i,j,rangefrom,rangeto):\n",
+    "\n",
+    "    import random\n",
+    "    X=np.zeros((i,j))\n",
+    "\n",
+    "    for i in range(i):\n",
+    "        for j in range (j):\n",
+    "            X[i,j]=random.randrange(rangefrom, rangeto)\n",
+    "\n",
+    "    return  X\n",
+    "\n",
+    "create_array(3,4, 0,6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary \n",
+    "\n",
+    "In this lab, we saw how to create and manipulate vectors and matrices in numpy. We shall now move forward to learning more complex operations including dot products and inverses. "
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
